PyMaker/datas/object2/RawHTML/i12601/Python_DOC_referPages.python-def-function-invalid-syntax.txt
<div class="post-text" itemprop="text">
<pre><code>  File "stats0.py", line 40
    def median(numbers):
      ^
  SyntaxError: invalid syntax
</code></pre>
<pre><code>def median(numbers):
    numbers.sort()
    size = len(numbers)
    midPos = size/2
    if size%2==0:
        median = (numbers[midPos]+numbers[midPos-1])/2.0
    else:
        median = numbers[midPos]
    return median
</code></pre>
<p>I keep getting this error. I have tried commenting it out but each 'def' has an error. I did look at each previous questions regarding this issue. As far as my understanding my indentation is correct. Please help, this is the first time I have received such an error. (was following a book's code) </p>
</div>
<div class="post-text" itemprop="text">
<p>The error would be before the definition of the function. Are there any codes defined before your function. I am able to get the output for the above program. 
The executable code is given below for your reference.</p>
<pre><code>def median(numbers):
    numbers.sort()
    size = len(numbers)
    midPos = size/2
    if size%2==0:
        median = (numbers[midPos]+numbers[midPos-1])/2.0
    else:
        median = numbers[midPos]
    return median


if __name__ == "__main__":

    numbers = [1,2,3,4,5,6,7,8,9,10]
    print median(numbers)

Output Console:

5.5

Process finished with exit code 0
</code></pre>
</div>
<span class="comment-copy">What is before the section you included? The error is there.</span>
<span class="comment-copy">Odds favor an unclosed set of delimiters; usually parens, but braces and brackets (anything that would allow a statement to continue to the next line) work too.</span>
<span class="comment-copy">Side note: You get this function <a href="https://docs.python.org/3/library/statistics.html#statistics.median" rel="nofollow noreferrer">for free</a> with Python 3.4+.  Also, your function does not work on the empty list, though it's debatable whether the empty list has a median at all.</span>
<span class="comment-copy">above this median function is other functions and below is main.</span>
<span class="comment-copy">still having problems, have code the same, all functions in same format and above the main function. the error still points at the def saying invalid. each time a change is made its saved and execute in terminal.</span>
<span class="comment-copy">Can you share your code - the functions above the median. Or what you are trying to execute</span>
